deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecomm-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ecomm
  template:
    metadata:
      labels:
        app: ecomm
    spec:
      containers:
      - name: ecomm
        image: bodukal/ecomm:latest
        ports:
        - containerPort: 8080
