service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecomm-service
  namespace: default
spec:
  selector:
    app: ecomm
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
